--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                 <label for="text">Senha</label><br>
                 <input class="txt-box" type="password" id="password-example"><br>
             </div>
-            <button type="button" class="btn btn-primary">Primary</button>
+            <button type="button" class="btn btn-primary">Enviar</button>
             <div class="cadastrar-se">
                 <p>Não tem uma conta?</p>
                 <a href="#">Cadastre-se aqui</a>
