--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/menu.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="Js/Java.js"></script>
+    <script src="Js/Jquery.js"></script>
     <title>GameMania</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -13,7 +16,7 @@
         <header>
             <nav>
                 <div class="menu">
-                    <a href="index.html"><img src="imagem/Menu.png" alt="Menu"></a>
+                    <a href="#" class="btn-abrir" onclick="abrirMenu()">&#9776;</a>
                 </div>
                 <div class="logo"> <a href="index.html"><img src="imagem/GAMEMANIA (1).png" alt="Logo GameMania"></a></div>
                 <div class="search-box">
@@ -30,6 +33,13 @@
                 </div>
              </nav>
         </header>
+        <nav id="menu" class="categorias">
+            <a href="#" class="home" onclick="fecharMenu()">&times;Fechar</a>
+            <a href="#" class="home">Home</a>
+            <a href="#" class="home">Compras</a>
+            <a href="#" class="home">Perfil</a>
+            <a href="#" class="home">Categorias</a>
+        </nav>
     <br>
     <br>   
         <main>
@@ -156,6 +166,6 @@
            </div>
         </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
 </body>
 </html>
